--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
+    "node-sass": "^4.9.4",
     "react": "^16.6.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "sass-loader": "^7.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
